--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "badersur.github.io",
 	"description": "A personal web app using React, Gatsby & TypeScript",
 	"private": true,
-	"version": "5.22.0",
+	"version": "5.23.0",
 	"author": {
 		"name": "Bader Nasser Al-Hashmi",
 		"email": "BaderSur@gmail.com",
@@ -42,7 +42,8 @@
 		"amend": "git commit --amend --no-edit --date=\"$(date)\"",
 		"amend-all": "run-s \"amend -- --all\"",
 		"amend-q": "cross-env HUSKY_SKIP_HOOKS=1 run-s amend",
-		"amend-all-q": "cross-env HUSKY_SKIP_HOOKS=1 run-s amend-all"
+		"amend-all-q": "cross-env HUSKY_SKIP_HOOKS=1 run-s amend-all",
+		"push-f": "git push -f"
 	},
 	"repository": {
 		"type": "git",
@@ -50,38 +51,39 @@
 	},
 	"bugs": "https://github.com/badersur/badersur.github.io/issues",
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.30",
-		"@fortawesome/free-brands-svg-icons": "^5.14.0",
-		"@fortawesome/free-solid-svg-icons": "^5.14.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.32",
+		"@fortawesome/free-brands-svg-icons": "^5.15.1",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
 		"@fortawesome/react-fontawesome": "^0.1.11",
 		"commonmark": "^0.29.2",
-		"gatsby": "^2.24.57",
-		"gatsby-image": "^2.4.17",
-		"gatsby-plugin-catch-links": "^2.3.11",
-		"gatsby-plugin-google-analytics": "^2.3.13",
-		"gatsby-plugin-manifest": "^2.4.28",
-		"gatsby-plugin-offline": "^3.2.27",
-		"gatsby-plugin-react-helmet": "^3.3.10",
-		"gatsby-plugin-sharp": "^2.6.35",
-		"gatsby-plugin-sitemap": "^2.4.12",
-		"gatsby-plugin-typescript": "^2.4.19",
-		"gatsby-source-filesystem": "^2.3.29",
-		"gatsby-transformer-sharp": "^2.5.14",
-		"gatsby-transformer-yaml": "^2.4.11",
+		"gatsby": "^2.24.68",
+		"gatsby-image": "^2.4.21",
+		"gatsby-plugin-catch-links": "^2.3.15",
+		"gatsby-plugin-google-analytics": "^2.3.16",
+		"gatsby-plugin-manifest": "^2.4.34",
+		"gatsby-plugin-offline": "^3.2.31",
+		"gatsby-plugin-react-helmet": "^3.3.13",
+		"gatsby-plugin-sharp": "^2.6.39",
+		"gatsby-plugin-sitemap": "^2.4.15",
+		"gatsby-plugin-typescript": "^2.4.21",
+		"gatsby-source-filesystem": "^2.3.33",
+		"gatsby-transformer-sharp": "^2.5.17",
+		"gatsby-transformer-yaml": "^2.4.14",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-helmet": "^5.2.1"
+		"react-helmet": "^6.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
 		"@types/commonmark": "^0.27.4",
-		"@types/node": "^13.13.19",
-		"@types/react": "^16.9.49",
+		"@types/node": "^14.11.5",
+		"@types/react": "^16.9.51",
 		"@types/react-dom": "^16.9.8",
-		"@types/react-helmet": "^5.0.16",
-		"@typescript-eslint/eslint-plugin": "^4.3.0",
-		"@typescript-eslint/parser": "^4.3.0",
+		"@types/react-helmet": "^6.1.0",
+		"@typescript-eslint/eslint-plugin": "^4.4.0",
+		"@typescript-eslint/parser": "^4.4.0",
 		"cross-env": "^7.0.2",
+		"eslint": "^7.10.0",
 		"eslint-config-xo": "^0.32.1",
 		"eslint-config-xo-react": "^0.23.0",
 		"eslint-config-xo-typescript": "^0.33.0",
@@ -90,19 +92,14 @@
 		"eslint-plugin-react-hooks": "^4.1.2",
 		"husky": "^4.3.0",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.1.1",
+		"prettier": "^2.1.2",
 		"stylelint": "^13.7.2",
 		"stylelint-config-standard": "^20.0.0",
 		"stylelint-config-xo": "^0.20.0",
-		"ts-node": "^8.10.2",
-		"typescript": "^3.9.7",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.3",
+		"webpack": "^4.44.2",
 		"xo": "^0.33.1"
-	},
-	"optionalDependencies": {
-		"@mdx-js/react": "^1.6.18",
-		"eslint": "^7.10.0",
-		"ink": "^3.0.7",
-		"react-refresh": "^0.8.3"
 	},
 	"xo": {
 		"envs": [
@@ -134,6 +131,15 @@
 					"ignore": [
 						"SEO"
 					]
+				}
+			],
+			"react/jsx-tag-spacing": [
+				"error",
+				{
+					"closingSlash": "never",
+					"beforeSelfClosing": "always",
+					"afterOpening": "never",
+					"beforeClosing": "never"
 				}
 			]
 		},
