--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
-    command = "npm run build"
+    command = "yarn build"
     publish = "public"
 
 # https://github.com/netlify/netlify-dev-plugin#project-detection
 [dev]
     # Command to start gatsby's server
-    command = "npm run serve"
+    command = "yarn serve"
     # Port that the dev server will be listening on
     port = 9000
     # required because i use a _redirect file
