--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "badersur.github.io",
 	"description": "A personal web app using React, Gatsby & TypeScript",
 	"private": true,
-	"version": "5.23.0",
+	"version": "5.24.0",
 	"author": {
 		"name": "Bader Nasser Al-Hashmi",
 		"email": "BaderSur@gmail.com",
@@ -10,7 +10,8 @@
 	},
 	"license": "MIT",
 	"engines": {
-		"node": ">=12"
+		"node": ">=12",
+		"yarn": ">=1.22.0"
 	},
 	"scripts": {
 		"clean": "gatsby clean",
@@ -54,42 +55,42 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.32",
 		"@fortawesome/free-brands-svg-icons": "^5.15.1",
 		"@fortawesome/free-solid-svg-icons": "^5.15.1",
-		"@fortawesome/react-fontawesome": "^0.1.11",
+		"@fortawesome/react-fontawesome": "^0.1.12",
 		"commonmark": "^0.29.2",
-		"gatsby": "^2.24.68",
+		"gatsby": "^2.25.0",
 		"gatsby-image": "^2.4.21",
 		"gatsby-plugin-catch-links": "^2.3.15",
-		"gatsby-plugin-google-analytics": "^2.3.16",
-		"gatsby-plugin-manifest": "^2.4.34",
-		"gatsby-plugin-offline": "^3.2.31",
-		"gatsby-plugin-react-helmet": "^3.3.13",
-		"gatsby-plugin-sharp": "^2.6.39",
-		"gatsby-plugin-sitemap": "^2.4.15",
-		"gatsby-plugin-typescript": "^2.4.21",
-		"gatsby-source-filesystem": "^2.3.33",
-		"gatsby-transformer-sharp": "^2.5.17",
-		"gatsby-transformer-yaml": "^2.4.14",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"gatsby-plugin-google-analytics": "^2.4.0",
+		"gatsby-plugin-manifest": "^2.5.0",
+		"gatsby-plugin-offline": "^3.3.0",
+		"gatsby-plugin-react-helmet": "^3.3.14",
+		"gatsby-plugin-sharp": "^2.7.0",
+		"gatsby-plugin-sitemap": "^2.5.0",
+		"gatsby-plugin-typescript": "^2.5.0",
+		"gatsby-source-filesystem": "^2.4.0",
+		"gatsby-transformer-sharp": "^2.5.21",
+		"gatsby-transformer-yaml": "^2.4.15",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.11.6",
+		"@babel/core": "^7.12.3",
 		"@types/commonmark": "^0.27.4",
-		"@types/node": "^14.11.5",
-		"@types/react": "^16.9.51",
-		"@types/react-dom": "^16.9.8",
+		"@types/node": "^14.14.6",
+		"@types/react": "^16.9.55",
+		"@types/react-dom": "^16.9.9",
 		"@types/react-helmet": "^6.1.0",
-		"@typescript-eslint/eslint-plugin": "^4.4.0",
-		"@typescript-eslint/parser": "^4.4.0",
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
 		"cross-env": "^7.0.2",
-		"eslint": "^7.10.0",
-		"eslint-config-xo": "^0.32.1",
+		"eslint": "^7.12.1",
+		"eslint-config-xo": "^0.33.1",
 		"eslint-config-xo-react": "^0.23.0",
-		"eslint-config-xo-typescript": "^0.33.0",
-		"eslint-plugin-jsx-a11y": "^6.3.1",
-		"eslint-plugin-react": "^7.21.3",
-		"eslint-plugin-react-hooks": "^4.1.2",
+		"eslint-config-xo-typescript": "^0.35.0",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4.3.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.1.2",
@@ -97,9 +98,8 @@
 		"stylelint-config-standard": "^20.0.0",
 		"stylelint-config-xo": "^0.20.0",
 		"ts-node": "^9.0.0",
-		"typescript": "^4.0.3",
-		"webpack": "^4.44.2",
-		"xo": "^0.33.1"
+		"typescript": "^4.0.5",
+		"xo": "^0.34.1"
 	},
 	"xo": {
 		"envs": [
