--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"yarn": ">=1.13.0"
 	},
 	"scripts": {
+		"postinstall": "husky install",
 		"clean": "gatsby clean",
 		"type-check": "tsc --noEmit",
 		"lint:prettier": "prettier -c .",
@@ -42,8 +43,8 @@
 		"bash:docker": "docker-compose run --rm app bash",
 		"amend": "git commit --amend --no-edit --date=\"$(date)\"",
 		"amend-all": "run-s \"amend -- --all\"",
-		"amend-q": "cross-env HUSKY_SKIP_HOOKS=1 run-s amend",
-		"amend-all-q": "cross-env HUSKY_SKIP_HOOKS=1 run-s amend-all",
+		"amend-q": "run-s \"amend -- -n\"",
+		"amend-all-q": "run-s \"amend -- --all -n\"",
 		"push-f": "git push -f"
 	},
 	"repository": {
@@ -52,58 +53,57 @@
 	},
 	"bugs": "https://github.com/badersur/badersur.github.io/issues",
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.32",
-		"@fortawesome/free-brands-svg-icons": "^5.15.1",
-		"@fortawesome/free-solid-svg-icons": "^5.15.1",
-		"@fortawesome/react-fontawesome": "^0.1.12",
-		"commonmark": "^0.29.2",
-		"gatsby": "^2.25.0",
-		"gatsby-image": "^2.4.21",
-		"gatsby-plugin-catch-links": "^2.3.15",
-		"gatsby-plugin-google-analytics": "^2.4.0",
-		"gatsby-plugin-manifest": "^2.5.0",
-		"gatsby-plugin-offline": "^3.3.0",
-		"gatsby-plugin-postcss": "^3.0.4",
-		"gatsby-plugin-react-helmet": "^3.3.14",
-		"gatsby-plugin-sharp": "^2.7.0",
-		"gatsby-plugin-sitemap": "^2.5.0",
-		"gatsby-plugin-typescript": "^2.5.0",
-		"gatsby-source-filesystem": "^2.4.0",
-		"gatsby-transformer-sharp": "^2.5.21",
-		"gatsby-transformer-yaml": "^2.4.15",
-		"postcss": "^8.1.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.34",
+		"@fortawesome/free-brands-svg-icons": "^5.15.2",
+		"@fortawesome/free-solid-svg-icons": "^5.15.2",
+		"@fortawesome/react-fontawesome": "^0.1.14",
+		"commonmark": "^0.29.3",
+		"gatsby": "^3.0.0",
+		"gatsby-image": "^3.0.0",
+		"gatsby-plugin-catch-links": "^3.0.0",
+		"gatsby-plugin-google-analytics": "^3.0.0",
+		"gatsby-plugin-manifest": "^3.0.0",
+		"gatsby-plugin-offline": "^4.0.0",
+		"gatsby-plugin-postcss": "^4.0.0",
+		"gatsby-plugin-react-helmet": "^4.0.0",
+		"gatsby-plugin-sharp": "^3.0.0",
+		"gatsby-plugin-sitemap": "^3.0.0",
+		"gatsby-plugin-typescript": "^3.0.0",
+		"gatsby-source-filesystem": "^3.0.0",
+		"gatsby-transformer-sharp": "^3.0.0",
+		"gatsby-transformer-yaml": "^3.0.0",
+		"postcss": "^8.2.6",
 		"postcss-preset-env": "^6.7.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.3",
+		"@babel/core": "^7.13.8",
 		"@types/commonmark": "^0.27.4",
-		"@types/node": "^14.14.6",
-		"@types/postcss-preset-env": "^6.7.0",
-		"@types/react": "^16.9.55",
-		"@types/react-dom": "^16.9.9",
+		"@types/node": "^14.14.31",
+		"@types/postcss-preset-env": "^6.7.1",
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.1",
 		"@types/react-helmet": "^6.1.0",
-		"@typescript-eslint/eslint-plugin": "^4.6.0",
-		"@typescript-eslint/parser": "^4.6.0",
-		"cross-env": "^7.0.2",
-		"eslint": "^7.12.1",
-		"eslint-config-xo": "^0.33.1",
-		"eslint-config-xo-react": "^0.23.0",
-		"eslint-config-xo-typescript": "^0.35.0",
+		"@typescript-eslint/eslint-plugin": "^4.16.1",
+		"@typescript-eslint/parser": "^4.16.1",
+		"eslint": "^7.21.0",
+		"eslint-config-xo": "^0.35.0",
+		"eslint-config-xo-react": "^0.24.0",
+		"eslint-config-xo-typescript": "^0.38.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"husky": "^4.3.0",
+		"husky": "^5.1.3",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.1.2",
-		"stylelint": "^13.7.2",
+		"prettier": "^2.2.1",
+		"stylelint": "^13.11.0",
 		"stylelint-config-standard": "^20.0.0",
 		"stylelint-config-xo": "^0.20.0",
-		"ts-node": "^9.0.0",
-		"typescript": "^4.0.5",
-		"xo": "^0.34.1"
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.2",
+		"xo": "^0.38.2"
 	},
 	"xo": {
 		"envs": [
@@ -126,6 +126,7 @@
 			"capitalized-comments": "off",
 			"import/no-unassigned-import": "warn",
 			"@typescript-eslint/no-unused-vars": "warn",
+			"@typescript-eslint/no-confusing-void-expression": "warn",
 			"react/jsx-key": "warn",
 			"react/no-danger": "warn",
 			"react/jsx-pascal-case": [
@@ -151,7 +152,8 @@
 			{
 				"files": "**/*.js",
 				"rules": {
-					"@typescript-eslint/no-unused-vars": "off"
+					"@typescript-eslint/no-unused-vars": "off",
+					"@typescript-eslint/no-confusing-void-expression": "off"
 				}
 			}
 		]
@@ -182,10 +184,5 @@
 			"stylelint-config-standard",
 			"stylelint-config-xo"
 		]
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "run-s build"
-		}
 	}
 }
